--- a/pt-BR/Atualizacoes/2022-04.md
+++ b/pt-BR/Atualizacoes/2022-04.md
@@ -1,6 +1,6 @@
 # 27/04/2022
 
-# Nova opção para exibir produtos na Tabela de preços ✨
+# Opção para exibir produtos na Tabela de preços ✨
 
 ## Alterações
 
@@ -11,8 +11,9 @@
 
 ![image](https://user-images.githubusercontent.com/91629430/165596731-c110d74f-8c00-459e-ad8c-f3ebcf3ef6f5.PNG)
 
-![image](https://user-images.githubusercontent.com/91629430/165596702-d28dec83-6b78-4bb4-849f-ea79a6b01bfa.png)
+Edição em lote:
 
+![image](https://user-images.githubusercontent.com/91629430/165596702-d28dec83-6b78-4bb4-849f-ea79a6b01bfa.png)
 
 # Melhorias no layouts de cards e arquivos ✨
 
